[gd_scene load_steps=21 format=3 uid="uid://cxto61pufeto"]

[ext_resource type="Script" path="res://assets/scripts/combat/enemies/worm/worm_spine_blaster.gd" id="1_4l1re"]
[ext_resource type="PackedScene" uid="uid://cooqg6aupfjd5" path="res://assets/models/worm/worm_spine-blaster.glb" id="1_uqn6k"]
[ext_resource type="Material" uid="uid://djcyepfaj5nbm" path="res://assets/materials/enemies/worm/mat_worm_body.tres" id="2_p3nw6"]
[ext_resource type="Material" uid="uid://x13860fm8vxa" path="res://assets/materials/enemies/mat_enemy_eyes.tres" id="3_y851k"]
[ext_resource type="Script" path="res://assets/scripts/combat/health/health_component.gd" id="4_of5qe"]
[ext_resource type="Script" path="res://assets/scripts/combat/health/hurtbox.gd" id="5_wdsxn"]
[ext_resource type="PackedScene" uid="uid://dxfhr0hajui1a" path="res://assets/prefabs/enemies/worm_blaster.tscn" id="7_c0p1n"]
[ext_resource type="Material" uid="uid://du21dhq63phaj" path="res://assets/materials/enemies/env_laser.tres" id="8_dapi7"]
[ext_resource type="Script" path="res://assets/scripts/combat/enemies/worm/worm_laser_blaster.gd" id="8_paqum"]
[ext_resource type="Script" path="res://assets/prefabs/player/random_sfx_player.gd" id="10_iuesq"]
[ext_resource type="AudioStream" uid="uid://vm4ytx56f5oa" path="res://assets/audio/sfx/enemy/damage/Punch Heavy A.wav" id="11_i2c67"]
[ext_resource type="AudioStream" uid="uid://xq4b7wqo6wef" path="res://assets/audio/sfx/enemy/damage/Punch Heavy B.wav" id="12_xi6sn"]
[ext_resource type="AudioStream" uid="uid://ds2sxm5hkfr5m" path="res://assets/audio/sfx/enemy/damage/Punch Heavy C.wav" id="13_okllf"]
[ext_resource type="AudioStream" uid="uid://dl5pnbh4xcra7" path="res://assets/audio/sfx/enemy/explosion/Fire Bomb Far 001.wav" id="14_2kufl"]
[ext_resource type="AudioStream" uid="uid://bdsktaap35hc3" path="res://assets/audio/sfx/enemy/explosion/Fire Bomb Far 002.wav" id="15_vce7u"]
[ext_resource type="AudioStream" uid="uid://cm42biio4hkgi" path="res://assets/audio/sfx/enemy/explosion/Fire Bomb Far 003.wav" id="16_dfi5b"]
[ext_resource type="AudioStream" uid="uid://bpq5coiya4jkg" path="res://assets/audio/sfx/enemy/explosion/Fire Bomb Far 004.wav" id="17_v7dem"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4sr6u"]
radius = 0.730765
height = 1.46153

[sub_resource type="CapsuleMesh" id="CapsuleMesh_f08rs"]
height = 30.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b128h"]
height = 30.0

[node name="WormSpineBlaster" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00506401, 0.0129366, 0.000232697)
script = ExtResource("1_4l1re")

[node name="mesh" parent="." instance=ExtResource("1_uqn6k")]

[node name="SpineFin" parent="mesh" index="0"]
surface_material_override/0 = ExtResource("2_p3nw6")
surface_material_override/1 = ExtResource("3_y851k")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_of5qe")
health_max = 20

[node name="Hurtbox" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 512
collision_mask = 768
script = ExtResource("5_wdsxn")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(3.35463, 0.370852, -0.0208479, 0.00801167, 0.11715, 3.37309, 0.371351, -3.35265, 0.115558, 0.0492388, 0.413175, -7.19541)
shape = SubResource("CapsuleShape3D_4sr6u")

[node name="EnemyBlaster" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_c0p1n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9)
health_component = NodePath("../HealthComponent")
sight_radius = 20
fire_rate = 3.0
bullet_speed = 3.0
apply_initial_bullet_velocity = false

[node name="Laser" type="Area3D" parent="."]
collision_mask = 256
script = ExtResource("8_paqum")
damage = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1.00536e-06, -23)
mesh = SubResource("CapsuleMesh_f08rs")
surface_material_override/0 = ExtResource("8_dapi7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1.00536e-06, -23)
shape = SubResource("CapsuleShape3D_b128h")

[node name="DmgSFX" type="AudioStreamPlayer3D" parent="."]
max_polyphony = 10
bus = &"SFX"
script = ExtResource("10_iuesq")
sfx = Array[AudioStream]([ExtResource("11_i2c67"), ExtResource("12_xi6sn"), ExtResource("13_okllf")])
pitch_scale_base = 1.201

[node name="ExplosionSFX" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"
script = ExtResource("10_iuesq")
sfx = Array[AudioStream]([ExtResource("14_2kufl"), ExtResource("15_vce7u"), ExtResource("16_dfi5b"), ExtResource("17_v7dem")])
pitch_scale_base = 1.2

[editable path="mesh"]
[editable path="EnemyBlaster"]
